Fixed overflowing of container and buttons by using height auto

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
 .outer-container{
     border: 5px solid #985812;
     background-color: #F7941D;
-    width:370px;
+    width: 500px;
+    height: 500px;
     margin: auto;
     margin-top: 10px;
     height: 580px;
@@ -20,12 +21,11 @@ body{
 
 }
 .container {
-  
     border: 5px solid #F7941D;
     display: flex;
     flex-wrap: wrap;
-    width: 350px;
-    height: 550px;
+    width: 480px;
+    height: auto;
     margin: 15px auto;
     padding:10px;
     justify-content: flex-start;
@@ -36,39 +36,18 @@ body{
 .panel {
 display: flex;
 border: 4px solid #5D2A00;
+border-radius:2px;
 background-color: #9CE4FA;
-width:900px;
-height: 100px;
-margin: 22px 5px;
+height: 130px;
+margin: 25px 0;
 padding: 10px;
 }
+
 .inner-panel     {
     background-color: #BEF7FF;
-    width:280px;
-}
-input {
-    background-color: #BEF7FF;
-    width:280px;
-      border: none;
+    width: 420px; 
 }
 
-
-input[name="textfield"]{
-    padding: 15px;
-    width: 250px;
-    margin: -20px -15px;
-    font-size: 20px;
- }
-input[name="history"]{
-    padding: 12px;
-    width: 250px;
-    height: 0px;
-    margin: 0 -10px;
-    font-size: 12px;
- }
- 
-
- 
 .screen {
     font-size: 20px;
     display: flex;
@@ -77,38 +56,42 @@ input[name="history"]{
     margin:5px 10px;
     overflow: hidden;
 }
-
-
-.button-number {
-height: auto;
-width:  auto;
+ .buttons{
+    display: flex;
+    height: 75%;
+ }
+.number-btn {
+width:  100%;
+flex-wrap: wrap;
 display: flex;
-padding: 10px;
-flex-direction: column;
+padding: 7px 5px 5px 0;
 overflow: hidden;
 justify-content: center;
+align-content: flex-start;
 }
 
 button {
     cursor: pointer;
-    padding: 21px;
+    padding: 23px;
     margin:2px;
     background-color: #FADDA1;
-    font-size: 21px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 300;
     border:4px solid #5D2A00;
     border-radius: 10px;
 }
+
 button:hover{
     background-color: #f1c670;
 
 }
 
-div .button-number{
+div .number-btn{
     margin: auto;
 }
+
 footer{
-    margin-top:5px;
+    margin-top: 100px;
     margin:10px;
     text-align: center;
     display: flex;
@@ -116,7 +99,9 @@ footer{
     font-size: 13px;
 
 }
-
+img {
+width:15px; margin: 0 5px;
+}
 footer img:hover {
  transform: scale(1.2);
  cursor: pointer;
@@ -126,20 +111,22 @@ footer img:hover {
 a{
     text-decoration: none;
     color: black
-
 }
 
 .clear button{
-width:135px;
+    height:135px;
 }
 
-#equal{
+.operator{
     background-color:#ceeaf2;
 }
+.operator:hover{
+    background-color:#8dcada;
+}
 
-#all-clear, #clear{
-    height: 20px;
-    font-size: 15px;
+.clear{
+    font-size: 10px;
     text-align: center;
+    margin:0;
 }
 
